[metadata]
name = kwonly-transformer
version = 0.0.0
description = We don't like positional args, we like keyword only args! 🎉
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kludex/kwonly-transformer
author = Marcelo Trylesinski
author_email = marcelotryle@email.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Twitter = https://twitter.com/marcelotryle

[options]
packages = find:
include_package_data = True
install_requires =
    libcst
python_requires = >=3.7

[options.extras_require]
test =
    coverage[toml] >= 6.2
    pytest >= 6.2.5

[flake8]
statistics = True
max-line-length = 88
ignore = E203,E501,W503
per-file-ignores =
    __init__.py:F401

[coverage:run]
source_pkgs = kwonly_transformer, tests

[coverage:report]
show_missing = True
skip_covered = True
